Bug when applying subsurf modifier on smooth objects. #47405

Closed
opened 2016-02-14 02:13:12 +01:00 by Ulysse Martin · 7 comments

System Information
Windows 10 64 bits GTX 970

Blender Version
Broken: https://developer.blender.org/rBc62468aabbdeae2c8e55ee5bfe86c73d98a123b2
Worked: previous commit (bisect to find the first bad commit

Short description of error
Hi. When applying subsurf modifier on smooth objects, we can see a slight shift/movement of the vertices.

Exact steps for others to reproduce the error
Test file: http://www.pasteall.org/blend/40645

steps: GLSL, textured (to see something), apply subsurf modifier or press P (this applies the modifier too)

**System Information** Windows 10 64 bits GTX 970 **Blender Version** Broken: https://developer.blender.org/rBc62468aabbdeae2c8e55ee5bfe86c73d98a123b2 Worked: previous commit (bisect to find the first bad commit **Short description of error** Hi. When applying subsurf modifier on smooth objects, we can see a slight shift/movement of the vertices. **Exact steps for others to reproduce the error** Test file: http://www.pasteall.org/blend/40645 steps: GLSL, textured (to see something), apply subsurf modifier or press P (this applies the modifier too)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Ulysse Martin 2016-02-14 02:13:12 +01:00
Author

Added subscriber: @you.le

Added subscriber: @you.le

Added subscribers: @Psy-Fi, @brecht

Added subscribers: @Psy-Fi, @brecht
Antonis Ryakiotakis was unassigned by Brecht Van Lommel 2016-02-14 03:48:38 +01:00
Brecht Van Lommel self-assigned this 2016-02-14 03:48:38 +01:00

It's a difference in the triangulation of quads, will fix it.

It's a difference in the triangulation of quads, will fix it.

This issue was referenced by de9ec80e64

This issue was referenced by de9ec80e644bb86a3ebb258db9135c3ee32bdcac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by b4e10aa70b

This issue was referenced by b4e10aa70b917eaeaeaa59a6ed16a4f824e4e2f3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47405
No description provided.