Fix T47405: subsurf triangulation was producing incorrect normals after last fix.